--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -1,3 +1,10 @@
 {
-    "CARS":"Cars"
+    "HOME":"Home",
+    "CARS":"Cars",
+    "CONTACTS": "Contacts",
+    "RENTAL_POLICY": "Rental Policy",
+    "COMMENTS": "Comments",
+    "ABOUT_CRETE": "About Crete",
+    "RENT_IRAKLEON": "Iraklion Airport",
+    "LOG_IN": "Log in"
 }
