--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -6,5 +6,17 @@
     "COMMENTS": "Отзывы",
     "ABOUT_CRETE": "О Крите",
     "RENT_IRAKLEON": "Аренда авто в аэропорту Ираклиона",
-    "LOG_IN":"Войти"
+    "LOG_IN":"Вход",
+    "LOG_UP": "Зарегистрироваться",
+    "LOG_OUT":"Выйти",
+    "NAME": "Имя",
+    "EMAIL": "Адрес электронной почты",
+    "PASSWORD":"Пароль",
+    "NAME_VALIDATION": "Введите имя",
+    "EMAIL_VALIDATION": "Введите адрес электронной почты",
+    "PASSWORD_VALIDATION":"Введите пароль",
+    "ENTER":"Войти",
+    "REGISTRATION":"Регистрация",
+    "CANCEL":"Отмена",
+    "ACCOUNT_EXCIST":"Уже есть аккаунт"
 }
