Сделал страницу машин

--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -18,6 +18,8 @@
     "ENTER":"Enter",
     "REGISTRATION":"Registration",
     "CANCEL":"Cancel",
-    "ACCOUNT_EXCIST":"I have the account"
+    "ACCOUNT_EXCIST":"I have the account",
+    "CAR_INFO": "Info",
+    "BOOK": "Book"
 
 }
