--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -20,5 +20,9 @@
     "CANCEL":"Отмена",
     "ACCOUNT_EXCIST":"Уже есть аккаунт",
     "CAR_INFO": "Детали",
-    "BOOK": "Забронировать"
+    "BOOK": "Забронировать",
+    "MANUAL":"Механика",
+    "AUTOMATIC": "Автомат",
+    "CABRIOLET": "Кабриолет",
+    "MINIVAN": "Миниавтобус"
 }
