Делаю бронирование машины.

--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -24,6 +24,18 @@
     "MANUAL":"Manual",
     "AUTOMATIC": "Automatic",
     "CABRIOLET": "Cabriolet",
-    "MINIVAN": "Minivan"
+    "MINIVAN": "Minivan",
+    "FUEL":"Fuel",
+    "TRANSMISSION":"Transmission",
+    "DOORS":"Doors",
+    "PASSENGERS":"Passengers",
+    "PETROL":"Petrol",
+    "DEISEL":"Deisel",
+    "DETAILS":"Details",
+    "CONSUMPTION":"Consumption",
+    "L":"l",
+    "KM":"km",
+    "OUR_CARS":"Our cars"
+    
 
 }
