--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -24,5 +24,16 @@
     "MANUAL":"Механика",
     "AUTOMATIC": "Автомат",
     "CABRIOLET": "Кабриолет",
-    "MINIVAN": "Миниавтобус"
+    "MINIVAN": "Миниавтобус",
+    "FUEL":"Топливо",
+    "TRANSMISSION":"Коробка передач",
+    "DOORS":"Двери",
+    "PASSENGERS":"Количество пассажиров",
+    "PETROL":"Бензин",
+    "DEISEL":"Дизель",
+    "DETAILS":"Характеристики",
+    "CONSUMPTION":"Расход",
+    "L":"л",
+    "KM":"км",
+    "OUR_CARS":"Наши автомобили"
 }
