Продолжаю делать booking-form

--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
     "TRANSMISSION":"Transmission",
     "DOORS":"Doors",
     "PASSENGERS":"Passengers",
+    "PASSENGERS_S":"Passengers",
     "PETROL":"Petrol",
     "DEISEL":"Deisel",
     "DETAILS":"Details",
