--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -29,6 +29,7 @@
     "TRANSMISSION":"Коробка передач",
     "DOORS":"Двери",
     "PASSENGERS":"Количество пассажиров",
+    "PASSENGERS_S":"Пассажиры",
     "PETROL":"Бензин",
     "DEISEL":"Дизель",
     "DETAILS":"Характеристики",
