--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -36,5 +36,6 @@
     "CONSUMPTION":"Расход",
     "L":"л",
     "KM":"км",
-    "OUR_CARS":"Наши автомобили"
+    "OUR_CARS":"Наши автомобили",
+    "NO_DATA":"Не выбран"
 }
