--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -10,7 +10,7 @@
     "LOG_UP": "Зарегистрироваться",
     "LOG_OUT":"Выйти",
     "NAME": "Имя",
-    "EMAIL": "Адрес электронной почты",
+    "EMAIL": "Почта",
     "PASSWORD":"Пароль",
     "NAME_VALIDATION": "Введите имя",
     "EMAIL_VALIDATION": "Введите адрес электронной почты",
@@ -37,5 +37,14 @@
     "L":"л",
     "KM":"км",
     "OUR_CARS":"Наши автомобили",
-    "NO_DATA":"Не выбран"
+    "NO_DATA":"Не выбран",
+    "MAIN_INFO":"Основная информация",
+    "PHONE":"Телефон",
+    "REG_DATE":"Дата регистрации",
+    "LANG":"Язык",
+    "MY_BOOKS":"Мои заказы",
+    "ORDER":"Заказ",
+    "PLACE":"Точка выдачи",
+    "RENT":"Аренда",
+    "CREATE_DATE":"Создан"
 }
