--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -46,7 +46,32 @@
     "ORDER":"Order",
     "PLACE":"Take point",
     "RENT":"Rent",
-    "CREATE_DATE":"Created"
-    
-
+    "CREATE_DATE":"Created",
+    "DATE_START":"Rent date start",
+    "CAR_LOOK":"Appearance",
+    "CAR_COMFORT":"Comfort",
+    "CAR_DRIVE":"Сharacteristics",
+    "REPORT":"Report",
+    "SEND":"Send",
+    "COMMENT":"Comment",
+    "ANSWER":"Response",
+    "ENTER_CAR":"Choose car",
+    "ENTER_MARK":"Enter mark",
+    "ENTER_DATE":"Enter date",
+    "ENTER_REPORT":"Enter report",
+    "ENTER_COMMENT":"Enter comment",
+    "SHOW_COMMENTS":"Show comments",
+    "CLOSE_COMMENTS":"Close comments",
+    "LICENSED_TEXT":"CarsCrete24.com is a company officially licensed by the GNTO (Greek National Tourism Organization) ",
+    "ADRESS":"Adress",
+    "OFFICE_HOURS":"Work hours",
+    "LICENSED":"License",
+    "CONTACTS_HEADER":"Contacts",
+    "CONTACT_INFO":"Contact info",
+    "KOURNAS_LAKE":"Kournas lake",
+    "BALI_VILLAGE":"Bali village",
+    "CHURCH_PREVELI":"Preveli church",
+    "KNOSS_PALACE":"Knoss palace",
+    "MODEL":"Model",
+    "DATE_END":"Rent date end"
 }
