--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -64,7 +64,7 @@
     "ENTER_COMMENT":"Введите текст комментария",
     "SHOW_COMMENTS":"Показать комментарии",
     "CLOSE_COMMENTS":"Скрыть комментарии",
-    "LICENSED_TEXT":"CarsCrete24.com is a company officially licensed by the GNTO (Greek National Tourism Organization) ",
+    "LICENSED_TEXT":"CarsCrete24.com это официально лицинзерованна GNTO (Greek National Tourism Organization)",
     "ADRESS":"Адрес",
     "OFFICE_HOURS":"Часы работы",
     "LICENSED":"Лицензия",
