--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -64,7 +64,7 @@
     "ENTER_COMMENT":"Введите текст комментария",
     "SHOW_COMMENTS":"Показать комментарии",
     "CLOSE_COMMENTS":"Скрыть комментарии",
-    "LICENSED_TEXT":"CarsCrete24.com официально лицинзерованна GNTO (Greek National Tourism Organization)",
+    "LICENSED_TEXT":"CarsCrete24.com официально лицинзерована GNTO (Greek National Tourism Organization)",
     "ADRESS":"Адрес",
     "OFFICE_HOURS":"Часы работы",
     "LICENSED":"Лицензия",
