Сделал загрузку фото в профиле, отправку на сервер без сохранения

--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -75,5 +75,6 @@
     "CHURCH_PREVELI":"Церковь Превели",
     "KNOSS_PALACE":"Кносский дворец",
     "MODEL":"Модель",
-    "DATE_END":"Дата конца аренды"    
+    "DATE_END":"Дата конца аренды",
+    "UPLOAD_PHOTO":"Загрузить фото"    
 }
