--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -73,5 +73,6 @@
     "CHURCH_PREVELI":"Preveli church",
     "KNOSS_PALACE":"Knoss palace",
     "MODEL":"Model",
-    "DATE_END":"Rent date end"
+    "DATE_END":"Rent date end",
+    "UPLOAD_PHOTO":"Upload photo"
 }
