--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -76,5 +76,9 @@
     "KNOSS_PALACE":"Кносский дворец",
     "MODEL":"Модель",
     "DATE_END":"Дата конца аренды",
-    "UPLOAD_PHOTO":"Загрузить фото"    
+    "UPLOAD_PHOTO":"Загрузить фото",
+    "RENTAL_POLICY_HEADER":"Аренда авто Крит - Политика",
+    "RENTAL_POLICY_DESCRIBTION":"Вещи, которые вы должны знать, прежде чем забронировать автомобиль. Прочитайте эти полезные условия, чтобы подготовиться.",
+    "RENTAL_POLICY_PRICE_INCLUDE_HEADER":"Наши цены всегда включают",
+    "RENTAL_POLICY_PRICE_INCLUDE":"Прокат защищен нашей <b>Премиум Страховкой</b>! В случае повреждения или кражи автомобиля, вы не обязаны платить какие-либо излишки, пока ВЫ используете автомобиль в соответствии с условиями ниже. В аренду !пикап! требуется депозит кредитная карта, и вы не обязаны платить за дополнительные страховки."
 }
