--- a/CarsCrete/ClientApp/src/assets/i18n/en.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/en.json
@@ -79,5 +79,6 @@
     "RENTAL_POLICY_HEADER":"Rent a car Crete - Policy",
     "RENTAL_POLICY_DESCRIBTION":"Things you have to know before reserving a car. Read these useful terms in order to be prepared.",
     "RENTAL_POLICY_PRICE_INCLUDE_HEADER":"Our Prices Always include",
-    "RENTAL_POLICY_PRICE_INCLUDE":"Your rental is protected with our Premium Insurance! In the event of damage or theft to the car, you are not required to pay any excess as long as the use of the car is according to terms & conditions below. At rental pick-up no credit card deposit is required and you will not be asked to pay extra for additional insurances."
+    "RENTAL_POLICY_PRICE_INCLUDE":"Your rental is protected with our Premium Insurance! In the event of damage or theft to the car, you are not required to pay any excess as long as the use of the car is according to terms & conditions below. At rental pick-up no credit card deposit is required and you will not be asked to pay extra for additional insurances.",
+    "SEND_MESSAGE":"Send message"
 }
