Сделал календарь без обозначения дат

--- a/CarsCrete/ClientApp/src/assets/i18n/ru.json
+++ b/CarsCrete/ClientApp/src/assets/i18n/ru.json
@@ -81,6 +81,7 @@
     "RENTAL_POLICY_DESCRIBTION":"Вещи, которые вы должны знать, прежде чем забронировать автомобиль. Прочитайте эти полезные условия, чтобы подготовиться.",
     "RENTAL_POLICY_PRICE_INCLUDE_HEADER":"Наши цены всегда включают",
     "RENTAL_POLICY_PRICE_INCLUDE":"Прокат защищен нашей Премиум Страховкой! В случае повреждения или кражи автомобиля, вы не обязаны платить какие-либо излишки, пока ВЫ используете автомобиль в соответствии с условиями ниже. В аренду !пикап! требуется депозит кредитная карта, и вы не обязаны платить за дополнительные страховки.",
-    "SEND_MESSAGE":"Отправить сообщение"
+    "SEND_MESSAGE":"Отправить сообщение",
+    "NOV":"Ноябрь"
 
 }
